Fix overflows

--- a/src/routes/blog/styles.css
+++ b/src/routes/blog/styles.css
@@ -18,7 +18,7 @@ pre {
   font-size: 1rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  overflow: scroll;
+  overflow: auto;
 }
 
 pre > code {
